--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" type="text/css" href="CSS/style.css">
+  <link rel="stylesheet" type="text/css" href="SCSS/main.css">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap" rel="stylesheet">
   <title>Document1</title>
 </head>
@@ -18,7 +18,7 @@
     </div>
     <div class="header__text-box">
       <h1 class="heading-primary">
-        <span class="heading-primary--main ">Outdoors</span>
+        <span class="heading-primary--main ">outdoors</span>
         <span class="heading-primary--sub">Is where life happens</span>
       </h1>
       <a href="#." class="btn btn--white btn--animated">discover our tours</a>
