--- a/index.html
+++ b/index.html
@@ -1,87 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" type="text/css" href="CSS/main.css" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap"
-      rel="stylesheet"
-    />
-    <title>Document1</title>
-  </head>
 
-  <body>
-    <header class="header">
-      <div class="header__logo-box">
-        <img src="./images/logo-white.png" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="CSS/iconfonts.css">
+  <link rel="stylesheet" type="text/css" href="CSS/style.css">
+
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900&display=swap" rel="stylesheet">
+  <title>Document</title>
+</head>
+
+<body>
+
+  <header class="header">
+    <div class="header__logo-box">
+      <img src="./images/logo-white.png">
+    </div>
+    <div class="header__text-box">
+      <h1 class="heading-primary">
+        <span class="heading-primary--main ">Outdoors</span>
+        <span class="heading-primary--sub">Is where life happens</span>
+      </h1>
+      <a href="#." class="btn btn--white btn--animated">discover our tours</a>
+    </div>
+  </header>
+  <main>
+    <section class="section-about">
+      <div class="u-text-center">
+        <h2 class="heading-secondary u-marging-bottom-big">
+          Exciting tours for adventures people
+        </h2>
       </div>
-      <div class="header__text-box">
-        <h1 class="heading-primary">
-          <span class="heading-primary--main ">outdoors</span>
-          <span class="heading-primary--sub">Is where life happens</span>
-        </h1>
-        <a href="#." class="btn btn--white btn--animated">discover our tours</a>
-      </div>
-    </header>
-    <main>
-      <section class="section-about">
-        <div class="u-text-center">
-          <h2 class="heading-secondary u-margin-bottom-big">
-            exciting tours for adventures people
-          </h2>
+      <div class="row">
+        <div class="col-1-of-2">
+          <h3 class="heading-third u-marging-bottom-small">
+            you'r going to fall in love with nature
+          </h3>
+          <p class="paragraph">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, repellendus dolore. Veritatis sapiente totam
+            voluptatum odio nostrum fugiat, corporis quas voluptate laboriosam ullam animi accusantium illo sint, porro
+            dicta ducimus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sit officia ipsa voluptatibus expedita
+            esse laborum laudantium a, velit delectus itaque porro iusto iste? Fugiat dolorum nihil in odit quia!
+            Aut quae magni obcaecati quam, in tenetur enim? Tempore libero consectetur maiores labore ab voluptas
+            dolorem, velit dolores distinctio eaque magnam enim animi accusantium nobis architecto accusamus facilis
+            beatae quo.
+
+          </p>
+          <h3 class="heading-third u-marging-bottom-small">
+            you'r going to fall in love with nature
+          </h3>
+          <p class="paragraph">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, repellendus dolore. Veritatis sapiente totam
+            voluptatum odio nostrum fugiat, corporis quas voluptate laboriosam ullam animi accusantium illo sint, porro
+            dicta ducimus.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis sit officia ipsa voluptatibus expedita
+            esse laborum laudantium a, velit delectus itaque porro iusto iste? Fugiat dolorum nihil in odit quia!
+
+          </p>
+          <a href="#." class="btn-text">Learn more &nbsp; &rarr;</a>
         </div>
-        <div class="row">
-          <div class="col-1-of-2">
-            <h3 class="heading-thired u-margin-bottom-small">
-              you're going to fall in love with nature
-            </h3>
-            <p class="paragraph">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus
-              pariatur natus nam, consequatur corrupti nemo, excepturi rem, quas
-              dolores ipsam nobis provident quam atque sunt! Nihil ex obcaecati
-              quia dignissimos! Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Saepe quaerat consequatur quasi, maiores a fuga
-              porro at nemo quod veritatis voluptatum quidem labore doloremque
-              laudantium voluptatibus adipisci ratione. Rerum, distinctio?
-            </p>
-            <h3 class="heading-thired">
-              you're going to fall in love with nature
-            </h3>
-            <p class="paragraph">
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus
-              pariatur natus nam, consequatur corrupti nemo, excepturi rem, quas
-              dolores ipsam nobis provident quam atque sunt! Nihil ex obcaecati
-              quia dignissimos!
-            </p>
-            <a href="#" class="button-text">Learn more &nbsp; &rarr;</a>
+        <div class="col-1-of-2">
+          <div class="composition">
+            <img class="composition__photo composition__photo--p1" src="./images/nat-1-large.jpg" alt="">
+            <img class="composition__photo composition__photo--p2" src="./images/nat-2-large.jpg" alt="">
+            <img class="composition__photo composition__photo--p3" src="./images/nat-3-large.jpg" alt="">
           </div>
+        </div>
 
-          <div class="col-1-of-2">
-            <div class="composition">
-              <img
-                src="./images/nat-1-large.jpg"
-                class="composition__photo composition__photo--p1"
-                alt="Photo 1"
-              />
-              <img
-                src="./images/nat-2-large.jpg"
-                class="composition__photo composition__photo--p2"
-                alt="Photo 2"
-              />
-              <img
-                src="./images/nat-3-large.jpg"
-                class="composition__photo composition__photo--p3"
-                alt="Photo 3"
-              />
+      </div>
+
+    </section>
+    <section class="section-features">
+      <div class="row">
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-world feature-box__icon"></i>
+            <h3 class="heading-third u-marging-bottom-small">
+              Explore the world
+            </h3>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis perferendis
+              eaque hic quasi vitae consequatur, aliquid alias sapiente placeat doloribus tempore consequuntur amet
+              magnam praesentium rem at, minus, ut atque!</p>
+          </div>
+        </div>
+
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-compass feature-box__icon"></i>
+            <h3 class="heading-third u-marging-bottom-small">
+              Explore the world
+            </h3>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis perferendis
+              eaque hic quasi vitae consequatur, aliquid alias sapiente placeat doloribus tempore consequuntur amet
+              magnam praesentium rem at, minus, ut atque!</p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-map feature-box__icon"></i>
+            <h3 class="heading-third u-marging-bottom-small">
+              Explore the world
+            </h3>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis perferendis
+              eaque hic quasi vitae consequatur, aliquid alias sapiente placeat doloribus tempore consequuntur amet
+              magnam praesentium rem at, minus, ut atque!</p>
+          </div>
+        </div>
+        <div class="col-1-of-4">
+          <div class="feature-box">
+            <i class="icon-basic-heart feature-box__icon"></i>
+            <h3 class="heading-third u-marging-bottom-small">
+              Explore the world
+            </h3>
+            <p class="feature-box__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis perferendis
+              eaque hic quasi vitae consequatur, aliquid alias sapiente placeat doloribus tempore consequuntur amet
+              magnam praesentium rem at, minus, ut atque!</p>
+          </div>
+        </div>
+      </div>
+
+    </section>
+    <section class="sction-tours">
+      <div class="u-text-center">
+        <h2 class="heading-secondary u-marging-bottom-big">
+          most popular tours
+        </h2>
+      </div>
+
+      <div class="row">
+        <div class="col-1-of-3">
+          <div class="card">
+            <div class="card__side card__side--front">
+              Front
+            </div>
+            <div class="card__side card__side--back">
+              Back
             </div>
           </div>
         </div>
-      </section>
-    </main>
-
-    <!-- <div class="wrapper">
+        <div class="col-1-of-3"></div>
+        <div class="col-1-of-3"></div>
+      </div>
+    </section>
+  </main>
+  <!-- <div class="wrapper">
     <div class="row">
       <div class="col-1-of-4">col-1-of-4</div>
       <div class="col-1-of-4">col-1-of-4</div>
@@ -113,5 +178,6 @@
       <div class="col-1-of-2">col-1-of-2</div>
     </div>
   </div> -->
-  </body>
+</body>
+
 </html>
